﻿Subtitle Edit Changelog

3.5.10 (xth July 2019) BETA
* NEW:
   * Profiles - thx philippwr, OmrSi, moob
   * Re-break line at cursor position shortcuts
   * Optimal CPS configurable in UI - thx Flitskikker
   * Import scene changes from EZTitles - thx Flitskikker 
   * Add new sub format - thx Matmanamane
* IMPROVED:
   * Update Portuguese translation - thx moob
   * Update Brazil translation - thx Igor
   * Update Korean translation - thx domdoll
   * Update Hungarian translation - thx Zityi
   * Update Japanese translation - thx ScratchBuild
   * Remove formatting split to sub items - thx Leon/OmrSi/marb99/cyberbrix
   * Auto rename after translate via plugin - thx Sopor
   * Allow dash in number for WebVTT files - thx Maksim
   * Make export font name dropdown wider - thx Eduard
   * Remove empty line between original/current after merge - thx darnn
   * Improve language tag handling in WebVTT - thx OmrSi/Jamakmake
   * Add stuttering support in "Change casing" - thx techguru
   * Add checkboxes to "Apply duration limits" - thx Flitskikker
   * "Extend only" option for "Duration recalculate" - thx Flitskikker
   * Add track number to cmd line convert - thx sneaker_ger
   * Include "Remove native formatting" in convert - thx Jamakmake
   * Spell check split include more Unicode spaces - thx Greg
* FIXED:
   * Fix "Change all" for whole text in OCR - thx wtester7
   * Fix  renumber problem - thx marb99
   * Fix for "Split long lines" with html tags - thx moob
   * Fix minor issue with quotes in reverse RTL - thx OmrSi
   * Fix shortcut searching with "&" character - thx Leon
   * Remove "gotta" to "got to" from English OCR fix replace list
   * Fix name/abbreviation check in OCR fix engine - thx teodargent
   * Make "column->delete text" work in translator mode - thx darnn
   * Fix focus issue in "Fix common errors" - thx OmrSi/Ding-adong
   * SRT: Allow spaces before/after time codes - thx SirEllert
   * Fix issue with music tags/remove text for HI - thx btsix